--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   <link rel="stylesheet" href="fares.css">
   <link rel="stylesheet" href="action.css">
   <link rel="stylesheet" href="header.css">
+
+  <script type="text/javascript" charset="UTF-8" src="http://code.jquery.com/jquery-3.1.1.min.js" ></script>
 </head>
 <body>
 
   <div class="header">
     <div class="container buffer-both">
-      <div class="header">
+      <div class="header-nav">
         <ul>
           <li class="header-nav-item">
             <a class="header-nav-link" href="#intro">О нас</a>
@@ -100,8 +102,7 @@
         <div class="column-1-3">
           <div class="fare text-center">
             <div class="fare-head">
-              <h2 class="title-medium">Заветная</h2>
-              <h2 class="title-medium">мечта</h2>
+              <h2 class="title-medium">Заветная<br>мечта</h2>
             </div>
             <div class="title-medium fare-price">
               <p>Цена:</p>
