--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="header.css">
 
   <script type="text/javascript" charset="UTF-8" src="http://code.jquery.com/jquery-3.1.1.min.js" ></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="parallax.js-1.4.2/parallax.min.js" ></script>
 </head>
 <body>
 
@@ -38,7 +40,7 @@
     </div>
   </div>
 
-  <div class="intro text-center" id="intro">
+  <div class="intro text-center" id="intro" data-parallax="scroll" data-image-src="back.jpg">
 
     <h1 class="title-large">Мы осуществляем ваши мечты!</h1>
 
