--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="header">
-    <div class="container buffer-both">
+    <div class="buffer-both">
       <div class="header-nav">
         <ul>
           <li class="header-nav-item">
