--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Лавка мечт</title>
   <link rel="stylesheet" href="reset.css">
 
   <link rel="stylesheet" href="text.css">
@@ -76,7 +76,7 @@
             </div>
             <div class="title-medium fare-price">
               <p>Цена:</p>
-              Один маленький секрет
+              20&nbsp;$
             </div>
             <div class="fare-footer">
               <div class="fare-order">
@@ -92,7 +92,7 @@
             </div>
             <div class="title-medium fare-price">
               <p>Цена:</p>
-              <p>Один большой секрет</p>
+              200&nbsp;$
             </div>
             <div class="fare-footer">
               <div class="fare-order">
@@ -108,7 +108,7 @@
             </div>
             <div class="title-medium fare-price">
               <p>Цена:</p>
-              Один огромный секрет
+              2&nbsp;000&nbsp;$
             </div>
             <div class="fare-footer">
               <div class="fare-order">
